Colaboratory を使用して作成しました

--- a/lesson01_install/【06】timeの使い方.ipynb
+++ b/lesson01_install/【06】timeの使い方.ipynb
@@ -38,7 +38,7 @@
       "id": "3ba761d2",
       "metadata": {
         "id": "3ba761d2",
-        "outputId": "f3738ee1-cb2b-4482-9b07-7ad3e83613fa",
+        "outputId": "4f868c2d-52c2-4665-aba0-815718acc1ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -48,7 +48,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "time:1.8372220993041992[s]\n"
+            "time:1.84[s]\n"
           ]
         }
       ],
@@ -63,7 +63,7 @@
         "\n",
         "end = time.time()\n",
         "total_time = end - start\n",
-        "print(f\"time:{total_time}\" + \"[s]\")"
+        "print(f\"time:{total_time:.2f}\" + \"[s]\")"
       ]
     },
     {
@@ -85,7 +85,7 @@
       "id": "3eb15328",
       "metadata": {
         "id": "3eb15328",
-        "outputId": "8a44b61d-3981-43d8-9bb4-5f8a81acd5c7",
+        "outputId": "54132973-cf40-4053-c60c-28ed9f7f8d89",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -95,12 +95,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "time:1.8501017093658447[s]\n"
+            "time:1.85[s]\n"
           ]
         }
       ],
       "source": [
-        "print(f\"time:{total_time}\" + \"[s]\")"
+        "print(f\"time:{total_time:.2f}\" + \"[s]\")"
       ]
     },
     {
@@ -116,10 +116,10 @@
     {
       "cell_type": "code",
       "execution_count": 5,
-      "id": "500f3c63",
+      "id": "60d56386",
       "metadata": {
-        "id": "500f3c63",
-        "outputId": "179f8fbd-6f6a-4a3c-d986-e257d66f1419",
+        "id": "60d56386",
+        "outputId": "894c7b43-ae77-43ae-ae2a-d255740f2de1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -129,8 +129,34 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 4.3 s, sys: 305 ms, total: 4.6 s\n",
-            "Wall time: 5.08 s\n"
+            "CPU times: user 3.31 s, sys: 311 ms, total: 3.62 s\n",
+            "Wall time: 4.1 s\n"
+          ]
+        }
+      ],
+      "source": [
+        "%%time\n",
+        "a = [x ** 2 for x in range(10000000)]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "id": "500f3c63",
+      "metadata": {
+        "id": "500f3c63",
+        "outputId": "58797c09-fddc-4499-9169-0ae32a2eff47",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 3.79 s, sys: 208 ms, total: 4 s\n",
+            "Wall time: 4.07 s\n"
           ]
         }
       ],
@@ -142,30 +168,14 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 6,
-      "id": "60d56386",
-      "metadata": {
-        "id": "60d56386",
-        "outputId": "11d0daff-e82a-4a7c-861a-5d192c4e7c5a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "CPU times: user 2.89 s, sys: 208 ms, total: 3.1 s\n",
-            "Wall time: 3.12 s\n"
-          ]
-        }
-      ],
+      "cell_type": "markdown",
       "source": [
-        "%%time\n",
-        "a = [x ** 2 for x in range(10000000)]"
-      ]
+        "## 全体を測定するときは%%timeで部分的に測定するときは%timeを使う。"
+      ],
+      "metadata": {
+        "id": "N-WvPL4UD02x"
+      },
+      "id": "N-WvPL4UD02x"
     },
     {
       "cell_type": "code",
@@ -173,7 +183,7 @@
       "id": "18f770d6",
       "metadata": {
         "id": "18f770d6",
-        "outputId": "dd782943-12b0-45d0-fe91-6c7f8b5b7c78",
+        "outputId": "dcb9eb99-4baf-4107-c713-ff4de56c9d73",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -183,8 +193,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 1.7 s, sys: 144 ms, total: 1.84 s\n",
-            "Wall time: 1.85 s\n"
+            "CPU times: user 1.55 s, sys: 131 ms, total: 1.68 s\n",
+            "Wall time: 1.69 s\n"
           ]
         }
       ],
@@ -203,7 +213,7 @@
       "id": "f9cf1a0e",
       "metadata": {
         "id": "f9cf1a0e",
-        "outputId": "3224e1b9-d4ad-48ab-ac4f-c71eb6a19ecd",
+        "outputId": "6f90ce94-3ed0-476f-8d84-7856b152273d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -213,8 +223,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 332 ms, sys: 24 ms, total: 356 ms\n",
-            "Wall time: 387 ms\n"
+            "CPU times: user 285 ms, sys: 21.9 ms, total: 307 ms\n",
+            "Wall time: 319 ms\n"
           ]
         }
       ],
