Colaboratory を使用して作成しました

--- a/lesson05_MOPAC/【03】mopacの計算ファイルの確認_colab.ipynb
+++ b/lesson05_MOPAC/【03】mopacの計算ファイルの確認_colab.ipynb
@@ -28,19 +28,19 @@
       ],
       "metadata": {
         "id": "wyZjziGC-NXj",
-        "outputId": "464a26da-8490-4e0a-c300-94fbd53d85fd",
+        "outputId": "032db3b1-9536-417a-a44b-98a46a371821",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "wyZjziGC-NXj",
-      "execution_count": 45,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -57,11 +57,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 2,
       "id": "39143dc1",
       "metadata": {
         "id": "39143dc1",
-        "outputId": "c4bf7545-089a-4390-c5d4-def7f214976e",
+        "outputId": "65747176-dcfd-4131-c463-64a8d0b41f28",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -493,11 +493,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 4,
       "id": "26d0ea3d",
       "metadata": {
         "id": "26d0ea3d",
-        "outputId": "d54298fd-ad9e-41ae-a1af-7f617496b713",
+        "outputId": "c20a43ff-638e-4d11-8927-53f6a25acc29",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -596,7 +596,9 @@
         "それぞれの意味\n",
         "\n",
         "HEAT OF FORMATION       =        -22.15781 KCAL/MOL =     -92.70830 KJ/MOL\n",
+        "\n",
         "GRADIENT NORM           =          0.99656          =       0.27640 PER ATOM\n",
+        "\n",
         "DIPOLE                  =          1.30764 DEBYE   POINT GROUP:  Cs  \n",
         "NO. OF FILLED LEVELS    =         18\n",
         "IONIZATION POTENTIAL    =          9.235653 EV\n",
@@ -628,7 +630,7 @@
         "id": "Pgrp1sz6_0QB"
       },
       "id": "Pgrp1sz6_0QB",
-      "execution_count": 48,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -643,11 +645,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 6,
       "id": "5670d269",
       "metadata": {
         "id": "5670d269",
-        "outputId": "be6efcf6-d200-45cf-b916-e7c1370d83db",
+        "outputId": "296f7a19-a243-4c28-f4b0-0f9fe328ed0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -666,7 +668,9 @@
       ],
       "source": [
         "file_path = \"/content/drive/MyDrive/data/mopac/AGBQKNBQESQNJD-SSDOTTSWSA-N.arc\"\n",
+        "# ファイル名の取得\n",
         "name = os.path.splitext(os.path.basename(file_path))[0]\n",
+        "# 取得したファイル名をプリント\n",
         "print(name)\n",
         "\n",
         "with open(file_path, mode='r') as f:\n",
@@ -720,7 +724,7 @@
         "id": "f0K1OLwMCDG8"
       },
       "id": "f0K1OLwMCDG8",
-      "execution_count": 61,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -734,14 +738,14 @@
       ],
       "metadata": {
         "id": "CZSSzdOtbhdL",
-        "outputId": "4ba6a62d-d332-4c39-f40f-305bc5c82741",
+        "outputId": "e5d2051b-3404-4e79-c1d1-e3b2367eaf15",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 468
+          "height": 641
         }
       },
       "id": "CZSSzdOtbhdL",
-      "execution_count": 62,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -749,48 +753,48 @@
             "text/plain": [
               "                        InChIKey  \\\n",
               "0    UBJVUCKUDDKUJF-UHFFFAOYSA-N   \n",
-              "1    PWKSKIMOESPYIA-BYPYZUCNSA-N   \n",
-              "2    JRLOEMCOOZSCQP-QFIPXVFZSA-N   \n",
-              "3    AGBQKNBQESQNJD-SSDOTTSWSA-N   \n",
-              "4    CSGAUKGQUCHWDP-UHFFFAOYSA-N   \n",
+              "1    UBQNRHZMVUUOMG-UHFFFAOYSA-N   \n",
+              "2    PWKSKIMOESPYIA-BYPYZUCNSA-N   \n",
+              "3    CSGAUKGQUCHWDP-UHFFFAOYSA-N   \n",
+              "4    AGBQKNBQESQNJD-SSDOTTSWSA-N   \n",
               "..                           ...   \n",
-              "116  PANKHBYNKQNAHN-MQQNZMFNSA-N   \n",
-              "117  WDGFFVCWBZVLCE-UHFFFAOYSA-N   \n",
-              "118  FDSDTBUPSURDBL-DKLMTRRASA-N   \n",
+              "116  FBSKJMQYURKNSU-ZLSOWSIRSA-N   \n",
+              "117  FDSDTBUPSURDBL-DKLMTRRASA-N   \n",
+              "118  BPYKTIZUTYGOLE-IFADSCNNSA-N   \n",
               "119  RSWGJHLUYNHPMX-ZULIPRJHSA-N   \n",
-              "120  BPYKTIZUTYGOLE-IFADSCNNSA-N   \n",
+              "120  BEJNERDRQOWKJM-UHFFFAOYSA-N   \n",
               "\n",
               "                                                 inchi  \\\n",
               "0       InChI=1S/C6H10S/c1-3-5-7-6-4-2/h3-4H,1-2,5-6H2   \n",
-              "1     InChI=1S/C5H9NO3S/c1-3(7)6-4(2-10)5(8)9/h4,10...   \n",
-              "2     InChI=1S/C22H25NO2/c1-2-3-4-12-22(24)18-9-7-1...   \n",
-              "3     InChI=1S/C8H14O2S2/c9-8(10)4-2-1-3-7-5-6-11-1...   \n",
-              "4     InChI=1S/C9H19NO2/c1-8(2)5-7(11)6-9(3,4)10(8)...   \n",
+              "1     InChI=1S/C8H8N2O3S/c9-14(11,12)5-7-6-3-1-2-4-...   \n",
+              "2     InChI=1S/C5H9NO3S/c1-3(7)6-4(2-10)5(8)9/h4,10...   \n",
+              "3     InChI=1S/C9H19NO2/c1-8(2)5-7(11)6-9(3,4)10(8)...   \n",
+              "4     InChI=1S/C8H14O2S2/c9-8(10)4-2-1-3-7-5-6-11-1...   \n",
               "..                                                 ...   \n",
-              "116   InChI=1S/C20H24O4/c1-15(11-7-13-17(3)19(21)22...   \n",
-              "117   InChI=1S/C11H8O5/c12-6-3-1-2-5-4-7(13)10(15)1...   \n",
-              "118   InChI=1S/C40H52O2/c1-29(17-13-19-31(3)21-23-3...   \n",
+              "116   InChI=1S/C29H36O15/c1-13-22(36)23(37)24(38)29...   \n",
+              "117   InChI=1S/C40H52O2/c1-29(17-13-19-31(3)21-23-3...   \n",
+              "118   InChI=1S/C33H36N4O6/c1-7-20-19(6)32(42)37-27(...   \n",
               "119   InChI=1S/C20H30O2/c1-13(2)14-6-8-16-15(12-14)...   \n",
-              "120   InChI=1S/C33H36N4O6/c1-7-20-19(6)32(42)37-27(...   \n",
+              "120   InChI=1S/C6H6O4/c7-2-4-1-5(8)6(9)3-10-4/h1,3,...   \n",
               "\n",
               "                                                smiles  HOMO  \n",
               "0                                S(CC=C)CC=C     11617 -8.58  \n",
-              "1                        SC[C@H](NC(=O)C)C(=O)O  12035 -9.48  \n",
-              "2     O[C@@H](CCCCC)c1cc(OCc2nc3c(cc2)cccc3)ccc1   ... -8.83  \n",
-              "3                         S1SCC[C@H]1CCCCC(=O)O   6112 -8.24  \n",
-              "4                 OC1CC(N(O)C(C1)(C)C)(C)C        5395 -9.12  \n",
+              "1                 S(=O)(=O)(N)Cc1noc2c1cccc2      5734 -9.60  \n",
+              "2                        SC[C@H](NC(=O)C)C(=O)O  12035 -9.48  \n",
+              "3                 OC1CC(N(O)C(C1)(C)C)(C)C        5395 -9.12  \n",
+              "4                         S1SCC[C@H]1CCCCC(=O)O   6112 -8.24  \n",
               "..                                                 ...   ...  \n",
-              "116   OC(=O)/C(=C/C=C/C(=C/C=C/C=C(/C=C/C=C(\\C)/C(=... -8.47  \n",
-              "117            Oc1c2c(cc(O)c1O)cccc(=O)c2O     5281571 -8.14  \n",
-              "118   O=C1CCC(C(=C1C)/C=C/C(=C/C=C/C(=C/C=C/C=C(/C=... -8.09  \n",
+              "116   O([C@H]1[C@H](OC(=O)/C=C/c2cc(O)c(O)cc2)[C@H]... -8.56  \n",
+              "117   O=C1CCC(C(=C1C)/C=C/C(=C/C=C/C(=C/C=C/C=C(/C=... -8.09  \n",
+              "118   OC(=O)CCc1c([nH]c(c1C)/C=C/1\\NC(=O)C(=C1C)C=C... -8.31  \n",
               "119   OC(=O)[C@]1([C@H]2[C@@]([C@@H]3C(=CC2)C=C(CC3... -8.62  \n",
-              "120   OC(=O)CCc1c([nH]c(c1C)/C=C/1\\NC(=O)C(=C1C)C=C... -8.31  \n",
+              "120                       o1c(cc(=O)c(O)c1)CO     3840 -9.49  \n",
               "\n",
               "[121 rows x 4 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-28c112be-ac69-487a-91e7-3b2ae1099aba\">\n",
+              "  <div id=\"df-860e225f-38a6-4b30-95cf-79504a620f07\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -826,31 +830,31 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
+              "      <td>UBQNRHZMVUUOMG-UHFFFAOYSA-N</td>\n",
+              "      <td>InChI=1S/C8H8N2O3S/c9-14(11,12)5-7-6-3-1-2-4-...</td>\n",
+              "      <td>S(=O)(=O)(N)Cc1noc2c1cccc2      5734</td>\n",
+              "      <td>-9.60</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
               "      <td>PWKSKIMOESPYIA-BYPYZUCNSA-N</td>\n",
               "      <td>InChI=1S/C5H9NO3S/c1-3(7)6-4(2-10)5(8)9/h4,10...</td>\n",
               "      <td>SC[C@H](NC(=O)C)C(=O)O  12035</td>\n",
               "      <td>-9.48</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>JRLOEMCOOZSCQP-QFIPXVFZSA-N</td>\n",
-              "      <td>InChI=1S/C22H25NO2/c1-2-3-4-12-22(24)18-9-7-1...</td>\n",
-              "      <td>O[C@@H](CCCCC)c1cc(OCc2nc3c(cc2)cccc3)ccc1   ...</td>\n",
-              "      <td>-8.83</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>AGBQKNBQESQNJD-SSDOTTSWSA-N</td>\n",
-              "      <td>InChI=1S/C8H14O2S2/c9-8(10)4-2-1-3-7-5-6-11-1...</td>\n",
-              "      <td>S1SCC[C@H]1CCCCC(=O)O   6112</td>\n",
-              "      <td>-8.24</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
               "      <td>CSGAUKGQUCHWDP-UHFFFAOYSA-N</td>\n",
               "      <td>InChI=1S/C9H19NO2/c1-8(2)5-7(11)6-9(3,4)10(8)...</td>\n",
               "      <td>OC1CC(N(O)C(C1)(C)C)(C)C        5395</td>\n",
               "      <td>-9.12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>AGBQKNBQESQNJD-SSDOTTSWSA-N</td>\n",
+              "      <td>InChI=1S/C8H14O2S2/c9-8(10)4-2-1-3-7-5-6-11-1...</td>\n",
+              "      <td>S1SCC[C@H]1CCCCC(=O)O   6112</td>\n",
+              "      <td>-8.24</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -861,24 +865,24 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>116</th>\n",
-              "      <td>PANKHBYNKQNAHN-MQQNZMFNSA-N</td>\n",
-              "      <td>InChI=1S/C20H24O4/c1-15(11-7-13-17(3)19(21)22...</td>\n",
-              "      <td>OC(=O)/C(=C/C=C/C(=C/C=C/C=C(/C=C/C=C(\\C)/C(=...</td>\n",
-              "      <td>-8.47</td>\n",
+              "      <td>FBSKJMQYURKNSU-ZLSOWSIRSA-N</td>\n",
+              "      <td>InChI=1S/C29H36O15/c1-13-22(36)23(37)24(38)29...</td>\n",
+              "      <td>O([C@H]1[C@H](OC(=O)/C=C/c2cc(O)c(O)cc2)[C@H]...</td>\n",
+              "      <td>-8.56</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>117</th>\n",
-              "      <td>WDGFFVCWBZVLCE-UHFFFAOYSA-N</td>\n",
-              "      <td>InChI=1S/C11H8O5/c12-6-3-1-2-5-4-7(13)10(15)1...</td>\n",
-              "      <td>Oc1c2c(cc(O)c1O)cccc(=O)c2O     5281571</td>\n",
-              "      <td>-8.14</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>118</th>\n",
               "      <td>FDSDTBUPSURDBL-DKLMTRRASA-N</td>\n",
               "      <td>InChI=1S/C40H52O2/c1-29(17-13-19-31(3)21-23-3...</td>\n",
               "      <td>O=C1CCC(C(=C1C)/C=C/C(=C/C=C/C(=C/C=C/C=C(/C=...</td>\n",
               "      <td>-8.09</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>118</th>\n",
+              "      <td>BPYKTIZUTYGOLE-IFADSCNNSA-N</td>\n",
+              "      <td>InChI=1S/C33H36N4O6/c1-7-20-19(6)32(42)37-27(...</td>\n",
+              "      <td>OC(=O)CCc1c([nH]c(c1C)/C=C/1\\NC(=O)C(=C1C)C=C...</td>\n",
+              "      <td>-8.31</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>119</th>\n",
@@ -889,16 +893,16 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>120</th>\n",
-              "      <td>BPYKTIZUTYGOLE-IFADSCNNSA-N</td>\n",
-              "      <td>InChI=1S/C33H36N4O6/c1-7-20-19(6)32(42)37-27(...</td>\n",
-              "      <td>OC(=O)CCc1c([nH]c(c1C)/C=C/1\\NC(=O)C(=C1C)C=C...</td>\n",
-              "      <td>-8.31</td>\n",
+              "      <td>BEJNERDRQOWKJM-UHFFFAOYSA-N</td>\n",
+              "      <td>InChI=1S/C6H6O4/c7-2-4-1-5(8)6(9)3-10-4/h1,3,...</td>\n",
+              "      <td>o1c(cc(=O)c(O)c1)CO     3840</td>\n",
+              "      <td>-9.49</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "<p>121 rows × 4 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-28c112be-ac69-487a-91e7-3b2ae1099aba')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-860e225f-38a6-4b30-95cf-79504a620f07')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -949,12 +953,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-28c112be-ac69-487a-91e7-3b2ae1099aba button.colab-df-convert');\n",
+              "          document.querySelector('#df-860e225f-38a6-4b30-95cf-79504a620f07 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-28c112be-ac69-487a-91e7-3b2ae1099aba');\n",
+              "          const element = document.querySelector('#df-860e225f-38a6-4b30-95cf-79504a620f07');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -977,7 +981,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 8
         }
       ]
     }
